--- a/assets/scss/breakpoints/_mobileup.scss
+++ b/assets/scss/breakpoints/_mobileup.scss
@@ -160,7 +160,6 @@ PAGE STYLES
 
 .contentContainer {
 	padding-top: 1em;
-	overflow: hidden;
 }
 
 
